fix(backend): eliminate lazy-loading exceptions across all repositories and controllers, enable open-in-view, expand CORS patterns, and increase AI read timeout